--- a/pkgdown/extra.css
+++ b/pkgdown/extra.css
@@ -17,3 +17,21 @@
     border-color: #2c3e50;
     background-color: #2c3e50;
 }
+
+/* Custom "collapse R code" class */
+.Rcode.collapse  { }
+
+div.hide-Rinput > .sourceCode {
+    display: none;
+}
+div.hide-Rinput::before {
+    padding: .2em .5em;
+    content: "Show/hide R source code";
+    display: block;
+    cursor: pointer;
+    background-color: #CECECE;
+
+}
+div.hide-Rinput:hover {
+    color: white; 
+}
